--- a/EP2/Exercicio1.html
+++ b/EP2/Exercicio1.html
@@ -1,1 +1,24 @@
-
+<!DOCTYPE>
+<html>
+<head>
+        <title>
+            TecWeb-Impacta 2017
+        </title>
+</head>
+<body>
+        <ol>
+            <li> Fechar contrato.</li>
+            <li> Análise de sistema.</li>
+                <ol>
+                    <li> Avaliação da empresa. </li>
+                    <ol>
+                        <li> Entrevista com funcionários.</li>
+                        <li> Pesquisa de documentação da empresa.</li>
+                    </ol>
+                    <li> Programação. </li>
+                    <li> Aprovação do projeto.</li>
+                </ol>
+            <li> Treinamento dos usuários.</li>
+        </ol>
+    </body>
+</html>
