--- a/EP2/Exercicio2.html
+++ b/EP2/Exercicio2.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <head>
-    <title>TecWeb-Impacta 2017</title>
+    <meta name="author" content="Cesar Augusto Pimenta RA - 1700020">
+    <meta name="author" content="Oseas Fernandes RA - 1700219">
+    <meta name="author" content="Marcos antonio ribeiro junior RA - 1700493">
+    <meta name="author" content="Rodrigo Ferreira da Silva RA - 1700742">
+    <meta name="author" content="Vinícius Tavares RA - 1700700 ">
+    <meta name="author" content="Ricardo Augusto Rodrigues Simões RA - 1700162 ">
+    <title>
+        TecWeb-Impacta 2017
+    </title>
 </head>
 <body>
     <ol>
