--- a/EP2/Exercicio5.html
+++ b/EP2/Exercicio5.html
@@ -1,3 +1,12 @@
+<head>
+    <meta name="author" content="Cesar Augusto Pimenta RA - 1700020">
+    <meta name="author" content="Oseas Fernandes RA - 1700219">
+    <meta name="author" content="Marcos antonio ribeiro junior RA - 1700493">
+    <meta name="author" content="Rodrigo Ferreira da Silva RA - 1700742">
+    <meta name="author" content="Vinícius Tavares RA - 1700700 ">
+    <meta name="author" content="Ricardo Augusto Rodrigues Simões RA - 1700162 ">
+</head>
+
 Durante a nossa vida:<br/>
 Conhecemos pessoas que <strong>vêm</strong> e que <strong>ficam</strong>,<br/>
 Outras que vêm e passam.<br/>
